--- a/web/admin/dashboard.html
+++ b/web/admin/dashboard.html
@@ -20,6 +20,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/e58e5937f8.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
@@ -111,7 +113,8 @@
                         class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
                         <div class="input-group">
                             <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..."
-                                aria-label="Search" aria-describedby="basic-addon2" style="border-radius: 100px;">
+                                aria-label="Search" aria-describedby="basic-addon2" style="border-radius: 100px; 
+                                background-color: #e3f2fd !important; margin-right: 10px;">
                             <div class="input-group-append">
                                 <button class="btn btn-primary" type="button">
                                     <i class="fas fa-search fa-sm"></i>
@@ -135,7 +138,7 @@
                             <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in"
                                 aria-labelledby="alertsDropdown">
                                 <h6 class="dropdown-header">
-                                    Feedback
+                                    <i class="fa-solid fa-envelope-open-text"></i> Feedback
                                 </h6>
                                 <a class="dropdown-item d-flex align-items-center" href="#">
                                     <div class="mr-3">
@@ -213,7 +216,7 @@
 
                         <!-- Total Teachers -->
                         <div class="col-xl-3 col-md-6 mb-4">
-                            <div class="card border-left-primary shadow h-100 py-2">
+                            <div class="card border-left-primary shadow h-100 py-2" style="padding: 1.5rem;">
                                 <div class="card-body">
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
@@ -221,8 +224,8 @@
                                                 Total Teachers</div>
                                             <div class="h5 mb-0 font-weight-bold text-gray-800">4000</div>
                                         </div>
-                                        <div class="col-auto">
-                                            <i class="fas fa-calendar fa-2x text-gray-300"></i>
+                                        <div class="col-auto" style="color: lightgray;">
+                                            <i class="fa-solid fa-school"></i>
                                         </div>
                                     </div>
                                 </div>
@@ -231,7 +234,7 @@
 
                         <!-- Total Students -->
                         <div class="col-xl-3 col-md-6 mb-4">
-                            <div class="card border-left-success shadow h-100 py-2">
+                            <div class="card border-left-success shadow h-100 py-2" style="padding: 1.5rem;">
                                 <div class="card-body">
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
@@ -239,8 +242,8 @@
                                                 Total Students</div>
                                             <div class="h5 mb-0 font-weight-bold text-gray-800">8000</div>
                                         </div>
-                                        <div class="col-auto">
-                                            <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
+                                        <div class="col-auto" style="color: lightgray;">
+                                            <i class="fa-solid fa-graduation-cap"></i>
                                         </div>
                                     </div>
                                 </div>
@@ -256,6 +259,7 @@
                                 <!-- Card Header - Dropdown -->
                                 <div
                                     class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                                    <i class="fa-solid fa-school"></i>
                                     <h6 class="m-0 font-weight-bold text-primary">Total Teachers</h6>
                                     <div class="dropdown no-arrow">
                                         <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
@@ -286,6 +290,7 @@
                                 <!-- Card Header - Dropdown -->
                                 <div
                                     class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                                    <i class="fa-solid fa-graduation-cap"></i>
                                     <h6 class="m-0 font-weight-bold text-primary">Total Students</h6>
                                     <div class="dropdown no-arrow">
                                         <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
